Implement all modules on proxy

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <title> Mashbnb </title>
   </head>
   <body>
-    Hello!
+    <div id="houseimages"></div>
+    <div id="descriptions"></div>
+    <div id="app"></div>
+    <div id="morehomes"></div>
+
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="http://localhost:3003/bundle.js"></script>
+    <script src="http://localhost:3210/bundle.js"></script>
+    <script src="http://localhost:3004/bundle.js"></script>
+    <script src="http://localhost:3000/bundle.js"></script>
+    <!-- <script src="https://s3-us-west-1.amazonaws.com/mashbnb/bundle.js"></script> -->
   </body>
 </html>
