Add webpack to remove dup styled-components

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,18 @@
     <title> Mashbnb </title>
   </head>
   <body>
-    <div id="houseimages"></div>
+    <div id="images"></div>
     <div id="descriptions"></div>
     <div id="app"></div>
     <div id="morehomes"></div>
 
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <script src="http://localhost:3003/bundle.js"></script>
-    <script src="http://localhost:3004/bundle.js"></script>
-    <script src="http://localhost:3210/bundle.js"></script>
-    <script src="http://localhost:3000/bundle.js"></script>
+    <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
+    <script src="/vendor.js"></script>
+    <script src="/homePics.js"></script>
+    <script src="/moreHomes.js"></script>
+    <script src="/reviews.js"></script>
+    <script src="/description.js"></script>
   </body>
 </html>
