--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
+    <script src="/idQuery.js"></script>
     <script src="/vendor.js"></script>
     <script src="/homePics.js"></script>
     <script src="/moreHomes.js"></script>
