Add css to properly render all modules

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title> Mashbnb </title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+
+    <div id="nav"></div>
     <div id="images"></div>
-    <div id="descriptions"></div>
-    <div id="app"></div>
+    <div>
+      <div id="booking"></div>
+      <div id="container">
+        <div id="descriptions"></div>
+        <div id="app"></div>
+      </div>
+    </div>
+
     <div id="morehomes"></div>
 
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
@@ -15,9 +24,11 @@
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
     <script src="/idQuery.js"></script>
     <script src="/vendor.js"></script>
+    <script src="/nav.js"></script>
+    <script src="/booking.js"></script>
     <script src="/homePics.js"></script>
-    <script src="/moreHomes.js"></script>
-    <script src="/reviews.js"></script>
     <script src="/description.js"></script>
+    <script src="/reviews.js"></script>
+    <script src="/moreHomes.js"></script>
   </body>
 </html>
