--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Mashbnb </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/styles.css">
   </head>
   <body>
 
@@ -23,12 +23,12 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
     <script src="/idQuery.js"></script>
-    <script src="/vendor.js"></script>
-    <script src="/nav.js"></script>
-    <script src="/booking.js"></script>
-    <script src="/homePics.js"></script>
-    <script src="/description.js"></script>
-    <script src="/reviews.js"></script>
-    <script src="/moreHomes.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/vendor.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/nav.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/booking.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/homePics.js"></script>
+    <script src="hhttps://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/description.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/reviews.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/moreHomes.js"></script>
   </body>
 </html>
