Further update for proxy depolyment testing

--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
     <script src="/idQuery.js"></script>
-    <!-- <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/vendor.js"></script> -->
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/vendor.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/nav.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/booking.js"></script>
-    <!-- <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/homePics.js"></script> -->
-    <!-- <script src="hhttps://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/description.js"></script> -->
-    <!-- <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/reviews.js"></script> -->
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/homePics.js"></script>
+    <script src="hhttps://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/description.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/reviews.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/moreHomes.js"></script>
   </body>
 </html>
