--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/vendor.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/nav.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/booking.js"></script>
-    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/homePics.js"></script>
-    <script src="hhttps://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/description.js"></script>
+    <!-- <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/homePics.js"></script> -->
+    <!-- <script src="hhttps://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/description.js"></script> -->
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/reviews.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/moreHomes.js"></script>
   </body>
