Add homePics module

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/vendor.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/nav.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/booking.js"></script>
-    <!-- <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/homePics.js"></script> -->
+    <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/homePics.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/description.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/reviews.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/mashbnb/proxy-files/moreHomes.js"></script>
